[package]
name = "multi-gpu-shadows"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
bitflags = "2.6.0"
fixedbitset = "0.5.7"
oxidx = { git = "https://github.com/if0ne/oxidx" }
gltf = { version = "1.4.1", features = ["guess_mime_type"] }
glam = "0.29.2"
image = "0.25.5"
rand = "0.8"
smallvec = "1.13.2"
parking_lot = "0.12.3"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.0"
mikktspace = "0.3.0"
url = "2.5.4"
winit = "0.30.2"
egui-winit = "0.29.1"
egui = "0.29.1"
